--- a/src/assets/color.scss
+++ b/src/assets/color.scss
@@ -1,3 +1,3 @@
-$backgroundColor: #F2F0EA;
-$fontPrimary : #080807 ;
-$fontAccent : #E0DBC4; 
+$backgroundColor: #272727;
+$fontPrimary : #c3c3c3 ;
+$fontAccent : #4e4e4e; 
