--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,11 @@ body {
   color: $fontPrimary;
   background-color:$backgroundColor;
 
+
+}
+
+::-webkit-scrollbar { 
+  display: none; 
 }
 
 code {
