--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 .App {
   width: 100vw;
   height: 100vh;
+  overflow:hidden;
   background-color: $backgroundColor; 
   display: flex;
   flex-direction: column;
