--- a/src/containers/hub/hub.scss
+++ b/src/containers/hub/hub.scss
@@ -51,21 +51,27 @@
         border: 0px;
         font-weight: 600;
         font-size: 10rem;
-        text-align: center;
+        cursor: pointer;
 
         .HubButtonLetter {
             display: inline-block;
-            animation-name: rotateOut;
+            animation-name: rotateOut, toMainColor;
             animation-duration: 1s;
             animation-fill-mode: both;
         }
 
         .HubButtonLetterAccent {
             display: inline-block;
-            color: $fontAccent;
-            animation-name: rotateOut;
+            animation-name: rotateOut, toAccentColor;
             animation-duration: 1s;
             animation-fill-mode: both;
+        }
+
+        .HubButtonLInkIcon {
+            margin-left: 1rem;
+            display: inline-block;
+            animation-name: slide;
+            animation-duration: 0.5s;
         }
     }
 
@@ -76,16 +82,50 @@
             animation-fill-mode: both;
         }
 
-        .HubButtonLetterAccent {
-            animation-name: rotateIn;
-            animation-duration: 1s;
-            animation-fill-mode: both;
-        }
+        .HubButtonLInkIcon {
+            animation-name: slide;
+            animation-duration: 0.5s;
 
+            svg {
+                bottom: 0px;
+            }
+        }
     }
 
 
 }
+
+@keyframes slide {
+    to {
+        margin-left: 1rem;
+    }
+
+    from {
+        margin-left: -3rem;
+    }
+
+}
+
+@keyframes toMainColor {
+    from {
+        color: $fontAccent;
+    }
+
+    to {
+        color: $fontPrimary;
+    }
+}
+
+@keyframes toAccentColor {
+    from {
+        color: $fontPrimary;
+    }
+
+    to {
+        color: $fontAccent;
+    }
+}
+
 
 
 @keyframes rotateIn {
